--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="ads-space" id="ad1">
                 <div class="ads-label">Advertisement</div>
                 <p><!-- Paste your AdMob/Ad code here --></p>
-                <div class="ads-info">Recommended: 728x90 (Banner)</div>
+                <div class="ads-info">Recommended: 728x90 (ca-app-pub-9772737061241423/3827409459)</div>
             </div>
         </div>
 
@@ -376,7 +376,7 @@
                 <div class="message" id="imageMessage"></div>
                 <button class="btn-primary" onclick="convertToPDF()" disabled id="convertBtn">Convert to PDF</button>
             </div>
-            <div class="ads-space"><!-- Ad Space 2 --></div>
+            <div class="ads-space"><!-- ca-app-pub-9772737061241423/3827409459 --></div>
         </div>
 
         <!-- PDF Merger -->
@@ -396,7 +396,7 @@
                 </div>
                 <div class="message" id="mergeMessage"></div>
             </div>
-            <div class="ads-space"><!-- Ad Space 3 --></div>
+            <div class="ads-space"><!-- ca-app-pub-9772737061241423/3827409459 --></div>
         </div>
 
         <!-- PDF Editor -->
@@ -419,7 +419,7 @@
                 <div class="message" id="editorMessage"></div>
                 <button class="btn-primary" onclick="downloadEditedPDF()" disabled id="editorDownloadBtn">Download Edited PDF</button>
             </div>
-            <div class="ads-space"><!-- Ad Space 4 --></div>
+            <div class="ads-space"><!-- ca-app-pub-9772737061241423/3827409459 --></div>
         </div>
 
         <!-- Email Extractor -->
@@ -439,7 +439,7 @@
                     <button class="btn-primary" onclick="copyEmails()" style="margin-top: 15px;">📋 Copy All</button>
                 </div>
             </div>
-            <div class="ads-space"><!-- Ad Space 5 --></div>
+            <div class="ads-space"><!-- ca-app-pub-9772737061241423/3827409459 --></div>
         </div>
     </div>
 
