--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <div class="ads-space" id="ad1">
                 <div class="ads-label">Advertisement</div>
                 <p><!-- Paste your AdMob/Ad code here --></p>
-                <div class="ads-info">Recommended: 728x90 (ca-app-pub-9772737061241423/3827409459)</div>
+                <div class="ads-info">(ca-app-pub-9772737061241423/3827409459)</div>
             </div>
         </div>
 
